--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@mui/x-date-pickers": "^7.28.3",
     "date-fns": "^2.30.0",
     "react": "^19.0.0",
+    "react-date-picker": "^11.0.0",
+    "react-day-picker": "^9.6.7",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-multi-carousel": "^2.8.5",
