--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
     "@mui/x-date-pickers": "^7.28.3",
+    "axios": "^1.9.0",
     "date-fns": "^2.30.0",
     "react": "^19.0.0",
     "react-date-picker": "^11.0.0",
