--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@googlemaps/markerclusterer": "^2.5.3",
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
     "@mui/x-date-pickers": "^7.28.3",
+    "@vis.gl/react-google-maps": "^1.5.2",
     "axios": "^1.9.0",
     "date-fns": "^2.30.0",
     "react": "^19.0.0",
