fixed UpperHeader and footer

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-google_key = 'AIzaSyCd6v2whmmM0grZKw0hD5n1ssBatDjzulc'
+VITE_GOOGLE_MAPS_KEY = 'AIzaSyCd6v2whmmM0grZKw0hD5n1ssBatDjzulc'
 NODE_ENV = 'prod'
