--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,24 @@ dist-ssr
 *.sln
 *.sw?
 .env
+
+# Dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# Testing
+/coverage
+
+# Production
+/build
+
+# Misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Backend
+/backend
